# confluence-copilot

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
src/: app.py  cl_app.py  confluence_qa.py  constants.py
