[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0.0"
atlassian-python-api = "^3.41.16"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-google-vertexai = "^2.0.5"
langchain-postgres = "^0.0.12"
lxml = "^5.3.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
streamlit = "^1.39.0"
tiktoken = "^0.8.0"
chainlit = "^1.2.0"
greenlet = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
